# CLox

./: CMakeLists.txt  main.c
head/: chunk.h  common.h  compile.h  debug.h  memory.h  object.h  scanner.h  table.h  value.h  vm.h
src/: chunk.c  compile.c  debug.c  memory.c  object.c  scanner.c  table.c  value.c  vm.c
test/: test.clox
